# LifeAfterLife_cross

./: .gitignore  CMakeLists.txt  LICENSE  run.bat
src/: main.cpp
src/state/: app_state.h
ui/: app-window.slint
ui/components/: graph-canvas.slint  inspector-panel.slint  person-card.slint  primary-button.slint  trees-rail.slint
ui/layouts/: main-layout.slint
ui/pages/: login-page.slint  register-page.slint
